argocd-argo-rollouts-repo/overlays/dev/patch-image-bluegreen.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp-bluegreen
spec:
  template:
    spec:
      containers:
        - name: myapp
          image: ghcr.io/nusrat-dops/app-repo:git-abc123
