argocd-argo-rollouts-repo/overlays/dev/patch-image-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: myapp-canary
spec:
  template:
    spec:
      containers:
        - name: myapp
          image: ghcr.io/nusrat-dops/argo-rollouts:blue-6
