argocd-argo-rollouts-repo/overlays/dev/patch-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-stable-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
